--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Raleway:wght@400;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Exodus` - Portfolio Landing Page</title>
     <script src="resources/jquery-3.5.1.min.js"></script>
+    <script src="js/main.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
@@ -70,6 +71,59 @@
                     <p class="skills-title-desc">I have an individual approach to each order. I always try to make my customer happy.</p>
                     <p class="skills-title-2">My experience:</p>
                     <p class="skills-desc-2">UI / UX, design, WEB - developing</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="works">
+        <div class="container-fluid">
+            <div class="work-title text-center revealator-zoomout revealator-once">
+                <p class="title">MY WORKS</p>
+                <hr class="title-hr-work">
+            </div>
+            <div class="work-sorter revealator-slideright revealator-once">
+                <button id="all-button">All</button>
+                <button id="dev-button">Development</button>
+                <button id="design-button">Design</button>
+            </div>
+            <div class="work-cards d-flex revealator-slideleft revealator-once">
+                <div class="work-card dev">
+                    <img class="work-card-img" src="img/works/portfolio.PNG" alt="">
+                    <p class="work-card-title">Exodus`</p>
+                    <p class="work-card-desc">Portfolio Development</p>
+                    <img class="work-done" src="img/card-done.png" alt="">
+                </div>
+                <div class="work-card design">
+                    <img class="work-card-img" src="img/works/easymind.JPG" alt="">
+                    <p class="work-card-title">EasyMind</p>
+                    <p class="work-card-desc">Website Design</p>
+                    <img class="work-done" src="img/card-done.png" alt="">
+                </div>
+                <div class="work-card dev">
+                    <img class="work-card-img" src="img/works/waxom.JPG" alt="">
+                    <p class="work-card-title">Waxom</p>
+                    <p class="work-card-desc">Website Development</p>
+                    <img class="work-done" src="img/card-done.png" alt="">
+                </div>
+            </div>
+            <div class="work-cards d-flex revealator-slideright revealator-once">
+                <div class="work-card dev">
+                    <img class="work-card-img" src="img/works/easymind.JPG" alt="">
+                    <p class="work-card-title">EasyMind</p>
+                    <p class="work-card-desc">Website Development</p>
+                    <img class="work-done" src="img/card-done.png" alt="">
+                </div>
+                <div class="work-card dev">
+                    <img class="work-card-img" src="img/works/denuvo.JPG" alt="">
+                    <p class="work-card-title">DenuvoGame</p>
+                    <p class="work-card-desc">Website Development</p>
+                    <img class="work-done" src="img/card-done.png" alt="">
+                </div>
+                <div class="work-card design">
+                    <img class="work-card-img" src="img/works/portfolio.PNG" alt="">
+                    <p class="work-card-title">Exodus`</p>
+                    <p class="work-card-desc">Portfolio Design</p>
+                    <img class="work-done" src="img/card-done.png" alt="">
                 </div>
             </div>
         </div>
